<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/opcion1"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/buscar"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/opcion2"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/ofrecer"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/opcion3"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/favoritos"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/opcion4"
        android:icon="@android:drawable/sym_action_chat"
        android:title="@string/chats"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/opcion5"
        android:icon="@drawable/user_icon"
        android:title="@string/perfil"
        app:showAsAction="ifRoom|withText" /></menu>