<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/contraseña2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/introduce_tu_contrase_a"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/contrase_a"
        app:layout_constraintBottom_toTopOf="@+id/contraseña2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nombreUsuario4"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/introduce_tu_nombre_de_usuario"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nombreUsuario3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/nombre_de_usuario"
        app:layout_constraintBottom_toTopOf="@+id/nombreUsuario4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/iniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="iniciarSesion"
        android:text="@string/iniciar_sesi_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña2" />

    <Button
        android:id="@+id/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="registrarse"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesion" />

    <Button
        android:id="@+id/recuperarContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="recuperarContraseña"
        android:text="@string/recuperar_contrase_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesion" />

</androidx.constraintlayout.widget.ConstraintLayout>