<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/labarra"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00FF00"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descripcionOferta"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:ems="10"
        android:hint="@string/introduce_una_descripci_n"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/nombreOferta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descripcion2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/descripcion"
        app:layout_constraintBottom_toTopOf="@+id/descripcionOferta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/crearEmpleo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:onClick="crearEmpleo"
        android:text="@string/empleo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionOferta"
        app:layout_constraintVertical_bias="0.471" />

    <Button
        android:id="@+id/crearServicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:onClick="crearServicio"
        android:text="@string/servicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionOferta"
        app:layout_constraintVertical_bias="0.471" />

    <EditText
        android:id="@+id/nombreOferta"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:ems="10"
        android:hint="@string/introduce_un_nombre"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/descripcionOferta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>