<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/mostrarEmpleos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mostrarEmpleos"
        android:text="@string/empleos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mostrarServicios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mostrarServicios"
        android:text="@string/servicios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mostrarOfertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mostrarAmbos"
        android:text="@string/ofertas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filtro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrarServicios" />

    <ListView
        android:id="@+id/listaOfertas"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filtro" />
</androidx.constraintlayout.widget.ConstraintLayout>