<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/labarra"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00FF00"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/preferenceIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/contentdescription"
        android:onClick="ajustes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <Button
        android:id="@+id/ajustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="ajustes"
        android:text="@string/ajustes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferenceIcon" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/contentdescription"
        android:onClick="mostrarPerfil"
        app:layout_constraintBottom_toTopOf="@+id/preferenceIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619"
        app:srcCompat="@drawable/user_icon" />

    <ImageView
        android:id="@+id/favouriteIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/contentdescription"
        android:onClick="mostrarFavoritos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/contentdescription"
        android:onClick="buscar"
        app:layout_constraintBottom_toTopOf="@+id/favouriteIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <ImageView
        android:id="@+id/addIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/contentdescription"
        android:onClick="ofrecer"
        app:layout_constraintBottom_toTopOf="@+id/chatIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <Button
        android:id="@+id/buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="buscar"
        android:text="@string/buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchIcon" />

    <ImageView
        android:id="@+id/chatIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/contentdescription"
        android:onClick="mostrarChats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615"
        app:srcCompat="@android:drawable/sym_action_chat" />

    <Button
        android:id="@+id/mostrarChats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="mostrarChats"
        android:text="@string/chats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatIcon" />

    <Button
        android:id="@+id/mostrarPerfil2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="mostrarPerfil"
        android:text="@string/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIcon" />

    <Button
        android:id="@+id/ofrecer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="ofrecer"
        android:text="@string/ofrecer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addIcon" />

    <Button
        android:id="@+id/mostrarFavoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="mostrarFavoritos"
        android:text="@string/favoritos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouriteIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>